feat: improving roles logic